--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ add_executable(unordered_set hash_tables/unordered_set.cpp)
 add_executable(map_example hash_tables/map_example.cpp)
 add_executable(linkedlist_cycle_detection hash_tables/linkedlist_cycle_detection.cpp)
 add_executable(unordered_map_example hash_tables/unordered_map_example.cpp)
-add_executable(2dvector 2dvector.cpp)
-add_executable(vectordemo vectordemo.cpp)
+add_executable(2dvector arrays_and_vectors/2dvector.cpp)
+add_executable(vectordemo arrays_and_vectors/vectordemo.cpp)
+add_executable(pairsum arrays_and_vectors/pairsum.cpp)
